--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "clarifai": "^2.9.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
