--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "clarifai": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "knex": "^0.16.3",
+    "pg": "^7.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-particles-js": "^2.4.2",
